# pharmflow

./: README.md  db.sqlite3  hello.py  manage.py  pyproject.toml  requirements.txt  workspace.html
inventory/: admin.py  forms.py  models.py  urls.py  views.py
inventory/migrations/: 0001_initial.py  0002_drug_slug.py  0003_alter_stock_drug.py
inventory/templates/drug/: index.html
inventory/templates/inventory/: base.html  form.html  index.html
pharmcore/: asgi.py  settings.py  urls.py  wsgi.py
